optimize WildEncounterRandomizerTest to not keep long strings in memory