@@ -8,7 +8,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.Assumptions.assumeFalse;
@@ -221,16 +220,16 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void randomEncountersKeepTypeThemesWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
 
         Settings settings = getStandardSettings(romName);
         settings.setKeepWildTypeThemes(true);
 
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
 
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
     }
 
     @ParameterizedTest
@@ -238,9 +237,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void randomEncountersKeepTypeThemesANDRandomTypeThemesWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
 
         Settings settings = getStandardSettings(romName);
         settings.setKeepWildTypeThemes(true);
@@ -248,7 +247,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
 
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
         randomTypeThemesAreasCheck();
     }
 
@@ -257,16 +256,16 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void randomEncountersKeepPrimaryTypeWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreasStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         List<List<Type>> beforePrimaryTypes = new ArrayList<>();
-        recordPrimaryTypesBefore(beforeAreasStrings, beforePrimaryTypes);
+        recordPrimaryTypesBefore(beforeAreas, beforePrimaryTypes);
 
         Settings settings = getStandardSettings(romName);
         settings.setWildPokemonTypeMod(Settings.WildPokemonTypeMod.KEEP_PRIMARY);
 
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
 
-        keepPrimaryTypeCheck(beforeAreasStrings, beforePrimaryTypes);
+        keepPrimaryTypeCheck(beforeAreas, beforePrimaryTypes);
     }
 
     @ParameterizedTest
@@ -308,9 +307,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void randomEncountersCatchEmAllANDKeepTypeThemesWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
 
         SpeciesSet allPokes = romHandler.getSpeciesSet();
 
@@ -322,7 +321,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
 
         catchEmAllCheck(allPokes);
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
     }
 
     @ParameterizedTest
@@ -330,9 +329,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void randomEncountersCatchEmAllANDRandomTypeThemesANDKeepTypeThemesWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
 
         SpeciesSet allPokes = romHandler.getSpeciesSet();
 
@@ -345,7 +344,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
         catchEmAllCheck(allPokes);
         randomTypeThemesAreasCheck();
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
     }
 
     private double calcPowerLevelDiff(Species a, Species b) {
@@ -664,7 +663,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
         }
         SpeciesSet notCatchable = new SpeciesSet(allPokes);
         notCatchable.removeAll(catchable);
-        System.out.println("Not catchable: " + notCatchable.stream().map(Species::getName).collect(Collectors.toList()));
+        System.out.println("Not catchable: " + notCatchable.stream().map(Species::getName).toList());
         assertTrue(notCatchable.isEmpty());
     }
 
@@ -686,9 +685,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void area1to1EncountersKeepTypeThemesWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
 
         Settings settings = getStandardSettings(romName);
         settings.setWildPokemonZoneMod(Settings.WildPokemonZoneMod.ENCOUNTER_SET);
@@ -696,7 +695,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
 
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
     }
 
     @ParameterizedTest
@@ -704,9 +703,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void area1to1EncountersKeepPrimaryTypeWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreasStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         List<List<Type>> beforePrimaryTypes = new ArrayList<>();
-        recordPrimaryTypesBefore(beforeAreasStrings, beforePrimaryTypes);
+        recordPrimaryTypesBefore(beforeAreas, beforePrimaryTypes);
 
         Settings settings = getStandardSettings(romName);
         settings.setWildPokemonZoneMod(Settings.WildPokemonZoneMod.ENCOUNTER_SET);
@@ -714,7 +713,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
 
-        keepPrimaryTypeCheck(beforeAreasStrings, beforePrimaryTypes);
+        keepPrimaryTypeCheck(beforeAreas, beforePrimaryTypes);
     }
 
     private void randomTypeThemesAreasCheck() {
@@ -778,17 +777,28 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
                 + (sp.getSecondaryType(false) == null ? "" : " / " + sp.getSecondaryType(false));
     }
 
-    private void recordTypeThemeBefore(List<List<String>> beforeAreaStrings, Map<Integer, Type> typeThemedAreas) {
+    private record AreaWithTypesRecord(String name, List<EncWithTypesRecord> encs) {}
+
+    private record EncWithTypesRecord(String name, Type primary, Type secondary) {
+        public EncWithTypesRecord(Encounter enc) {
+            Species pk = enc.getSpecies();
+            this(pk.getFullName(), pk.getPrimaryType(false), pk.getSecondaryType(false));
+        }
+
+        @Override
+        public String toString() {
+            return name + ", " + primary + (secondary == null ? "" : " / " + secondary);
+        }
+    }
+
+    private void recordTypeThemeBefore(List<AreaWithTypesRecord> beforeAreas, Map<Integer, Type> typeThemedAreas) {
         List<EncounterArea> encounterAreas = romHandler.getEncounters(true);
         for (int i = 0; i < encounterAreas.size(); i++) {
             EncounterArea area = encounterAreas.get(i);
-            List<String> beforeStrings = new ArrayList<>();
-            beforeAreaStrings.add(beforeStrings);
-            beforeStrings.add(area.toString());
-            for (Encounter enc : area) {
-                Species pk = enc.getSpecies();
-                beforeStrings.add(toNameAndTypesString(pk));
-            }
+
+            AreaWithTypesRecord beforeArea = new AreaWithTypesRecord(area.getDisplayName(),
+                    area.stream().map(EncWithTypesRecord::new).toList());
+            beforeAreas.add(beforeArea);
 
             Type theme = getThemedAreaType(area);
             if (theme != null) {
@@ -828,13 +838,14 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
     }
 
-    private void keepTypeThemedAreasCheck(List<List<String>> beforeAreaStrings, Map<Integer, Type> typeThemedAreas) {
+    private void keepTypeThemedAreasCheck(List<AreaWithTypesRecord> beforeAreas, Map<Integer, Type> typeThemedAreas) {
         List<EncounterArea> encounterAreas = romHandler.getEncounters(true);
         for (int i = 0; i < encounterAreas.size(); i++) {
-            List<String> beforeStrings = beforeAreaStrings.get(i);
-            System.out.println("Before: " + beforeStrings.get(0));
-            for (int j = 1; j < beforeStrings.size(); j++) {
-                System.out.println("\t" + beforeStrings.get(j));
+
+            AreaWithTypesRecord beforeArea = beforeAreas.get(i);
+            System.out.println("Before: " + beforeArea.name());
+            for (EncWithTypesRecord encRecord : beforeArea.encs()) {
+                System.out.println("\t" + encRecord);
             }
 
             EncounterArea area = encounterAreas.get(i);
@@ -854,30 +865,32 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
         }
     }
 
-    private void recordPrimaryTypesBefore(List<List<String>> beforeAreaStrings, List<List<Type>> beforePrimaryTypes) {
+    private void recordPrimaryTypesBefore(List<AreaWithTypesRecord> beforeAreas, List<List<Type>> beforePrimaryTypes) {
         List<EncounterArea> encounterAreas = romHandler.getEncounters(true);
-        for (int i = 0; i < encounterAreas.size(); i++) {
-            EncounterArea area = encounterAreas.get(i);
-            List<String> beforeStrings = new ArrayList<>();
-            beforeAreaStrings.add(beforeStrings);
-            beforeStrings.add(area.toString());
+        for (EncounterArea area : encounterAreas) {
+
+            AreaWithTypesRecord beforeArea = new AreaWithTypesRecord(area.getDisplayName(),
+                    area.stream().map(EncWithTypesRecord::new).toList());
+            beforeAreas.add(beforeArea);
+
             List<Type> beforeTypes = new ArrayList<>();
             beforePrimaryTypes.add(beforeTypes);
             for (Encounter enc : area) {
                 Species pk = enc.getSpecies();
-                beforeStrings.add(toNameAndTypesString(pk));
                 beforeTypes.add(pk.getPrimaryType(false));
             }
         }
+
     }
 
-    private void keepPrimaryTypeCheck(List<List<String>> beforeAreaStrings, List<List<Type>> beforePrimaryTypes) {
+    private void keepPrimaryTypeCheck(List<AreaWithTypesRecord> beforeAreas, List<List<Type>> beforePrimaryTypes) {
         List<EncounterArea> encounterAreas = romHandler.getEncounters(true);
         for (int i = 0; i < encounterAreas.size(); i++) {
-            List<String> beforeStrings = beforeAreaStrings.get(i);
-            System.out.println("Before: " + beforeStrings.get(0));
-            for (int j = 1; j < beforeStrings.size(); j++) {
-                System.out.println("\t" + beforeStrings.get(j));
+
+            AreaWithTypesRecord beforeArea = beforeAreas.get(i);
+            System.out.println("Before: " + beforeArea.name());
+            for (EncWithTypesRecord encRecord : beforeArea.encs()) {
+                System.out.println("\t" + encRecord);
             }
 
             EncounterArea area = encounterAreas.get(i);
@@ -886,7 +899,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
                 Encounter enc = area.get(j);
                 Species pk = enc.getSpecies();
                 Type primary = beforePrimaryTypes.get(i).get(j);
-                System.out.println("\t" + toNameAndTypesString(pk));
+                System.out.println("\t" + new EncWithTypesRecord(enc));
                 assertTrue(pk.getPrimaryType(false) == primary || pk.getSecondaryType(false) == primary);
             }
             System.out.println();
@@ -966,9 +979,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
             assumeTrue(romHandler.getROMType() == Gen3Constants.RomType_FRLG);
         }
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
 
         SpeciesSet allPokes = romHandler.getSpeciesSet();
 
@@ -980,7 +993,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
         catchEmAllCheck(allPokes);
 
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
     }
 
     @ParameterizedTest
@@ -994,9 +1007,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
             assumeTrue(romHandler.getROMType() == Gen3Constants.RomType_FRLG);
         }
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
 
         SpeciesSet allPokes = romHandler.getSpeciesSet();
 
@@ -1010,7 +1023,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
         catchEmAllCheck(allPokes);
 
         randomTypeThemesAreasCheck();
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
     }
 
     @ParameterizedTest
@@ -1272,9 +1285,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void location1to1EncountersKeepPrimaryTypeWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreasStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         List<List<Type>> beforePrimaryTypes = new ArrayList<>();
-        recordPrimaryTypesBefore(beforeAreasStrings, beforePrimaryTypes);
+        recordPrimaryTypesBefore(beforeAreas, beforePrimaryTypes);
 
         Settings settings = getStandardSettings(romName);
         settings.setWildPokemonZoneMod(Settings.WildPokemonZoneMod.NAMED_LOCATION);
@@ -1282,7 +1295,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
 
-        keepPrimaryTypeCheck(beforeAreasStrings, beforePrimaryTypes);
+        keepPrimaryTypeCheck(beforeAreas, beforePrimaryTypes);
     }
 
     private void randomTypeThemesLocationsCheck() {
@@ -1606,9 +1619,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void game1To1KeepTypeThemesWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
 
         Settings settings = new Settings();
         settings.setWildPokemonZoneMod(Settings.WildPokemonZoneMod.GAME);
@@ -1618,7 +1631,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
         new WildEncounterRandomizer(romHandler, settings, RND).randomizeEncounters();
 
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
     }
 
     @ParameterizedTest
@@ -1626,9 +1639,9 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
     public void globalFamilyToFamilyKeepTypeThemesWorks(String romName) {
         activateRomHandler(romName);
 
-        List<List<String>> beforeAreaStrings = new ArrayList<>();
+        List<AreaWithTypesRecord> beforeAreas = new ArrayList<>();
         Map<Integer, Type> typeThemedAreas = new HashMap<>();
-        recordTypeThemeBefore(beforeAreaStrings, typeThemedAreas);
+        recordTypeThemeBefore(beforeAreas, typeThemedAreas);
         List<EncounterArea> before = deepCopyEncounters(romHandler.getEncounters(true));
 
         Settings settings = getStandardSettings(romName);
@@ -1642,7 +1655,7 @@ public class WildEncounterRandomizerTest extends RandomizerTest {
 
         //TODO: check family integrity
         checkIsReplaced1To1(before, after, true);
-        keepTypeThemedAreasCheck(beforeAreaStrings, typeThemedAreas);
+        keepTypeThemedAreasCheck(beforeAreas, typeThemedAreas);
     }
 
     /**
